# site

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  pages.yml  perseus.yml
content/blog/beautiful-postgresql-templates/: index.md
content/blog/messily-thinking-pythonically/: index.md
content/blog/muddled-property-based-tests/: index.md
content/blog/property-based-testing-from-scratch/: index.md
content/blog/static-perseus-tip/: index.md
content/blog/static-site-rust-perseus/: index.md
content/blog/testing-data-structures-binary-tree/: index.md
content/blog/why-webassembly/: index.md
src/: data.rs  main.rs
src/templates/: index.rs  post.rs
static/: extra.css
